kubernetes-infrastructure/gitops/apps-testing/n8n/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
