kubernetes-infrastructure/gitops/apps-testing/n8n/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: https
  hostnames:
    - n8n.nulcell.com
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: n8n
          port: 5678
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-http-redirect
  namespace: n8n
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: http
  hostnames:
    - n8n.nulcell.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
